--- a/zippytube/package.json
+++ b/zippytube/package.json
@@ -21,6 +21,7 @@
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "http-proxy": "^1.18.0",
+    "kafkajs": "^1.11.0",
     "md5": "^2.2.1",
     "mongoose": "^5.8.1",
     "multer": "^1.4.2",
